<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="app_name">GalleryApplication</string>
    <string name="content_description">TODO</string>
    <string name="cancel_btn">Cancel</string>
    <string name="delete_btn">Delete</string>
    <string name="ok_btn">OK</string>
    <string name="next_btn">Next</string>
    <string name="add_fab">Add</string>
    <string name="title_action_cancel">Action has been canceled</string>
    <string name="title_basic_setting">Basic Settings</string>
    <string name="title_other">Other</string>
    <string name="msg_save_file_success">Save file successfully</string>
    <string name="msg_save_file_failed">Save file failed</string>

    <!--    #region Activity Default    -->
    <string name="title_default_1">Photos &amp; Videos</string>
    <string name="title_albums_1">Albums</string>

    <string name="actionbar_title_layout_1">View</string>
    <string name="actionbar_griddate_layout_1">Date</string>
    <string name="actionbar_gridonly_layout_1">Grid Only</string>
    <string name="actionbar_details_layout_1">Details</string>

    <string name="actionbar_settings_1">Settings</string>
    <string name="actionbar_slideshow_1">Slideshow</string>

    <string name="actionbar_addnewalbum_layout_1" tools:ignore="Typos">Add new album</string>

    <string name="navbar_viewall_1">View All</string>
    <string name="navbar_album_1">Albums</string>
    <string name="navbar_favorite_1">Favorite</string>

    <string name="griddate_layout_date_1">01/01/2021</string>

    <string name="image_desc_1">Image</string>
    <string name="album_name_1">Image Name</string>
    <string name="album_members_number_1">1 Photo(s)</string>

    <string name="settings_dark_theme_1">Dark Theme</string>

    <string name="settings_language_1">Language</string>
    <string name="settings_language_summary_1">Choose language to display in application</string>
    <!--    #endregion    -->

    <!--    #region Activity Photo Detail    -->
    <string name="info_dropdown_item_2">Info</string>
    <string name="copy_dropdown_item_2">Copy To…</string>
    <string name="set_picture_as_dropdown_item_2">Set picture as</string>

    <string name="back_btn_2">Back</string>
    <string name="share_btn_2">Share image</string>
    <string name="delete_btn_2">Delete image</string>
    <string name="more_option_btn_2">More Options</string>

    <string name="edit_btn_2">Edit</string>
    <string name="rotateR_btn_2">Rotate Right</string>
    <string name="rotateL_btn_2">Rotate Left</string>

    <string name="info_datetime_label_2">Datetime</string>
    <string name="info_detail_label_2">Detail</string>
    <string name="info_resolution_label_2">Resolution</string>
    <string name="info_file_size_label_2">File size</string>
    <string name="info_folder_label_2">Folder</string>
    <string name="info_path_label_2">Path</string>


    <string name="title_delete_confirm">Are you sure?</string>
    <string name="sub_text_delete_confirm">Temporarily delete the item into Trash now?\n(Or Permanently delete the item)</string>
    <string name="title_delete_success">Delete successfully</string>
    <string name="title_add_to_favourite">Add to favourite successfully</string>
    <string name="title_remove_from_favourite">Remove from favourite successfully</string>
    <!--    #endregion    -->

    <!--    #region Incognito Folder Activity-->
    <string name="title_new_pin_code_form">Set up PIN code</string>
    <string name="label_pin_code_et">PIN code</string>
    <string name="label_confirm_pin_code_et">Confirm PIN code</string>

    <string name="err_msg_pin_code_lenth">PIN code requires at least 6 digits</string>
    <string name="err_msg_pin_code_not_match">Confirm PIN code does not match</string>
    <string name="err_msg_pin_code_incorrect">PIN code is not correct</string>

    <string name="err_msg_hide_file_failed">Move to incognito folder failed</string>
    <string name="err_msg_hide_file_success">Move to incognito folder success</string>

    <string name="sub_text_remove_from_incognito">Remove this item from incognito folder</string>
    <string name="msg_remove_from_incognito_success">Remove from incognito successfully</string>
    <string name="msg_remove_from_incognito_failed">Remove from incognito failed</string>


    <string name="title_incognito">Incognito Folder</string>
    <!--    #endregion-->

    <string name="tv_photocamera_pick_6">Photo</string>
    <string name="tv_videocamera_pick_6">Video</string>

    <!--untranslatable-->
    <string name="language_english" translatable="false">English</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>

    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_default_v.2_1">Add new album</string>
    <string name="add_album_save_1">Save</string>
    <string name="album_name_add_album_1">Album name</string>
    <string name="album_name_create_error_1">This field cannot be empty</string>
    <string name="add_photo_to_album_1">Add photo(s)</string>
    <string name="choose_photos_title_1">Choose photo(s)</string>
    <string name="number_photo_selected_add_album_1">" selected"</string>
    <string name="album_name_empty_error_warning_1">Album\'s name cannot be empty</string>
    <string name="album_name_duplicate_error_warning_1">Album\'s name has already existed</string>
    <string name="album_image_empty_error_warning_1">At least ONE file should be chosen</string>
    <string name="title_favorite_1">Favorite</string>
    <string name="navbar_camera_1">Camera</string>
    <string name="delete_album_1">Delete album</string>
    <string name="delete_album_dialog_message_1">Are you certain to delete this album?</string>
    <string name="delete_album_dialog_title_1">Delete album</string>
    <string name="delete_album_ok_1">OK</string>
    <string name="delete_album_cancel_1">Cancel</string>
    <string name="modify_album_1">Modify album</string>
    <string name="modify_photos_1">Modify photos</string>
    <string name="info_album_label_2">Album</string>
    <string name="title_delete_failed">Delete is aborted</string>
    <string name="title_delete_cancel">Delete is cancelled</string>
</resources>