<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- "Slideshow" -->
    <item
        android:id="@+id/Slideshow_Favorite"
        android:title="@string/actionbar_slideshow_1"
        android:icon="@drawable/ic_slideshow_darkmode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ViewDropDown_Favorite"
        android:title="@string/actionbar_title_layout_1"
        android:icon="@drawable/ic_gridonly_layout_darkmode"
        app:showAsAction="ifRoom">
        <menu>
            <!-- "Grid-Only layout" -->
            <item
                android:id="@+id/GridOnly_Favorite"
                android:title="@string/actionbar_gridonly_layout_1"
                app:showAsAction="ifRoom" />

            <!-- "Grid-Date layout" -->
            <item
                android:id="@+id/GridDate_Favorite"
                android:title="@string/actionbar_griddate_layout_1"
                app:showAsAction="ifRoom" />

            <!-- "Details List layout" -->
            <item
                android:id="@+id/DetailsList_Favorite"
                android:title="@string/actionbar_details_layout_1"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <!-- "Settings" -->
    <item
        android:id="@+id/Settings_Favorite"
        android:title="@string/actionbar_settings_1"
        android:icon="@drawable/ic_settings_darkmode"
        android:onClick="settings"
        app:showAsAction="ifRoom" />

</menu>