<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- "Slideshow" -->
    <item
        android:id="@+id/Modify_AlbumDetail"
        android:title="@string/modify_album_1"
        android:icon="@drawable/ic_edit_album_darkmode"
        android:onClick="modifyAlbum"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ViewDropDown_AlbumDetail"
        android:title="@string/actionbar_title_layout_1"
        android:icon="@drawable/ic_gridonly_layout_darkmode"
        app:showAsAction="ifRoom">
        <menu>
            <!-- "Grid-Only layout" -->
            <item
                android:id="@+id/GridOnly_AlbumDetail"
                android:title="@string/actionbar_gridonly_layout_1"
                app:showAsAction="ifRoom" />

            <!-- "Grid-Date layout" -->
            <item
                android:id="@+id/GridDate_AlbumDetail"
                android:title="@string/actionbar_griddate_layout_1"
                app:showAsAction="ifRoom" />

            <!-- "Details List layout" -->
            <item
                android:id="@+id/DetailsList_AlbumDetail"
                android:title="@string/actionbar_details_layout_1"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <!-- "Settings" -->
    <item
        android:id="@+id/Delete_AlbumDetail"
        android:title="@string/delete_album_1"
        android:icon="@drawable/ic_delete_darkmode"
        android:onClick="deleteAlbum"
        app:showAsAction="ifRoom" />

</menu>