<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addAlbumConstraintLayout"
    android:fitsSystemWindows="true"
    tools:context=".activities.CreateAlbumActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addAlbumToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary_main"
        app:titleTextColor="@color/colorOnPrimary_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/addAlbumTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_default_v.2_1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorOnPrimary_main"
            android:includeFontPadding="false" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/albumCreateNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:hintEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="256"
            app:errorEnabled="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonAddPhotosToAlbum">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/albumCreateNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:includeFontPadding="false"
                android:textSize="20sp"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="256"
                android:hint="@string/album_name_add_album_1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddPhotosToAlbum"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary_main"
            android:text="@string/add_photo_to_album_1"
            android:drawableLeft="@drawable/ic_photo_to_album"
            android:background="@drawable/drawable_button_add_album_border"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="selectPhotos"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numberAddPhotosToAlbum"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary_main"
            android:text="@string/number_photo_selected_add_album_1"
            android:gravity="right"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddPhotosToAlbum"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>